--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   width: 60%;
   border-radius: 15px;
   background-color: rgb(229, 231, 249);
+  display: flex;
+  margin-top: 35px;
+  max-width: 1200px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 15px;
 }
 
 .app {
